# nvds-dev-template

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  sgie1_config.txt  sgie2_config.txt  sgie3_config.txt
.devcontainer/: devcontainer.json
src/: main.c
